stderr
JudgeMan.java:35: error: ')' expected
        if(isFlush(hand){
                        ^
1 error
